# exercise08_Mateo

./: .gitignore  README.md  docker-compose.yml
docs/: docker_ps.txt  perception_msgs.md  results.md  results_static.csv  topics_phase1.txt
ros2_ws/bags/depth_demo/: metadata.yaml
ros2_ws/bags/yolo_demo/: metadata.yaml
ros2_ws/install/depth_perception/lib/depth_perception/: depth_node  ground_segmentation_node
ros2_ws/install/depth_perception/share/depth_perception/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/depth_perception/: setup.py
ros2_ws/src/depth_perception/depth_perception/: depth_node.py  ground_segmentation_node.py
ros2_ws/src/depth_perception/launch/: depth.launch.py
ros2_ws/src/perception_msgs/: CMakeLists.txt
ros2_ws/src/perception_msgs/msg/: CMakeLists.txt  Detection.msg
ros2_ws/src/uav_local_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/uav_local_planner/config/: apf_params.yaml
ros2_ws/src/uav_local_planner/launch/: apf_demo.launch.py
ros2_ws/src/uav_local_planner/resource/: uav_local_planner
ros2_ws/src/uav_local_planner/rviz/: apf_demo.rviz
ros2_ws/src/uav_local_planner/uav_local_planner/: __init__.py  apf_planner_node.py  metrics_node.py
ros2_ws/src/yolo_detector/: setup.py
ros2_ws/src/yolo_detector/yolo_detector/: detector_node.py
scripts/: spawn_default_obstacles.sh
worlds/: obstacle_course.sdf  perception_world.sdf
worlds/spawn_models/: building_box.sdf  human_cylinder.sdf  tree_cylinder.sdf  vehicle_box.sdf
(+40 files in other folders)
